--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -6,7 +6,7 @@ serenity {
     logging = "NORMAL"
     console.headings="normal"
 }
-webdriver.base.url = "https://duckduckgo.com"
+webdriver.base.url = "https://duckduckgo.com/"
 
 headless.mode = true
 environment = chrome
